--- a/about.html
+++ b/about.html
@@ -52,9 +52,9 @@
 	
 		<nav>
 			<ul>
-				<li><a href = "Website_HomePage.html">Home</a></li>
-				<li><a href = "Website_Products_or_ServicesPage.html">Products</a></li>
-				<li><a href = "Website_ContactsPage.html">Contact</a></li>
+				<li><a href = "index.html">Home</a></li>
+				<li><a href = "about.html">Products</a></li>
+				<li><a href = "contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	
@@ -135,6 +135,7 @@
 	</footer>
 
 </body>
+
 
 
 
