--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
 		</ul>
 	</section>
 	
-	<button class="cta-button" onclick="window.location.href='Website_ContactsPage.html'">Order Now</button>
+	<button class="cta-button" onclick="window.location.href='contact.html'">Order Now</button>
 	
 	<hr>
 	
@@ -143,3 +143,4 @@
 
 
 </html>
+
